# line-draw

./: .gitignore  CLAUDE.md  full_scale.ipynb  utils.py
.claude/: settings.json
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: routes.py  websocket.py
backend/app/core/: drawing.py  img_pipeline.py  simulation.py
backend/app/models/: schemas.py
backend/app/services/: job_manager.py
experiments/: img_pipeline.py  main.ipynb  orchistrate.ipynb  requirments.txt  simple.ipynb
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ImageUploader.tsx  ParameterControls.tsx  ProcessingView.tsx  ResultDisplay.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: api.ts
